objects/L2I_Airport__c.object
<CustomObject>
    <fields>
        <fullName>L2I_Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify records to migrate</description>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Tax_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rate</label>
        <referenceTo>blng__TaxRate__c</referenceTo>
        <relationshipLabel>Airports</relationshipLabel>
        <relationshipName>Airports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Airport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>L2I_Migrate__c</columns>
        <columns>NAME</columns>
        <columns>L2I_Location__c</columns>
        <columns>L2I_Tax_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Airport Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>